# rust-kernel

./: Cargo.toml  Makefile  README.md  rustfmt.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  zshrc
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  test.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs  mod.rs
src/arch/: mod.rs
src/arch/x86_64/: cpu.rs  gdt.rs  interrupts.rs  mod.rs  tss.rs
src/devices/: mod.rs  qemu.rs  serial.rs
src/devices/vga/: buffer.rs  color.rs  mod.rs  screen_char.rs  writer.rs
src/task/: executor.rs  keyboard.rs  mod.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
