[package]
name = "rust_kernel"
version = "0.1.0"
authors = ["Zach Szafran <zszafran@gmail.com>"]
edition = "2018"

[profile.dev]
# https://github.com/rust-lang/cargo/issues/7359
# panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = { version = "0.9.11", features = ["map_physical_memory"]}
rlibc = "1.0.0"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.12.2"
uart_16550 = "0.2.10"
pic8259_simple = "0.2.0"
pc-keyboard = "0.5.1"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
# run-args = ["-curses"]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 300                  # (in seconds)

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false